   Add page links on the main page (easier than going to Related Pages,
   and we can also list special files like plugin-symbols.c).
 * src/utils.c:
   When detecting a change on disk, reload the file after all pending
   Scintilla messages have been processed, to prevent problems with
   partial colourisation.
 * src/symbols.c:
   Fix bug with showing macro list items all on one line.


2008-03-19  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugins.c:
   Set mnemonic for Plugin Manager.
   Use GTK_RESPONSE_CANCEL for Plugin Manager dialog so pressing escape
   closes the dialog.


2008-03-18  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/treeviews.c, src/symbols.c, src/symbols.h:
   Save sorting order of the symbol list when saving a file (#1917262).
 * data/filetype_extensions.conf, src/filetypes.c:
   Add ".xhtml" extension for filetype XML (#1914587).


2008-03-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * doc/geany.txt, doc/geany.html:
   Add a note about column mode editing.
 * src/editor.c:
   Fix broken auto multiline comment with files in CR/LF mode.
 * src/win32.c:
   Fix encoding problems with project file dialogs.
 * src/plugins.c:
   Rework internal handling of plugin/module loading.
   At startup, only load enabled plugins, all others are only loaded
   when the plugin manager is opened and get completely unloaded when
   it is closed.
 * data/filetypes.caml, data/filetypes.cpp, data/filetypes.c,
   data/filetypes.d, data/filetypes.fortran, src/build.c:
   Remove old and useless code from build_link_file().
   Don't add "-o" compiler option automatically instead make it
   configurable through linker command.
 * data/filetypes.python, src/highlighting.c:
   Add additional keyword group for python and slightly change the
   foreground colour for style "word2".
 * geany.glade, src/dialogs.c, src/interface.c:
   Fix modal dialog problems on Windows by not setting taskbar hint
   (closes #1916994).

